# mintlify-mcp

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  package.json  tsconfig.json
docs/: architecture-plan.md  business-value-proposition.md  embedded-mode-research.md  enterprise-architecture.md  enterprise-requirements.md  reverse-engineering-mintlify-api.md  universal-docs-support.md
python/: pyproject.toml
python/agno/: __init__.py  main.py
python/server/: main.py
src/: index.ts  server.ts
src/backends/: agno.ts  mintlify.ts  registry.ts  types.ts
src/backends/embedded/: config.ts  index.ts  instructions.ts  knowledge.ts  providers.ts  retriever.ts  tools.ts
src/cli/: create.ts  list.ts  prompt.ts  seed.ts  serve.ts  setup.ts  start.ts  stop.ts
src/config/: loader.ts  paths.ts  schema.ts
src/discovery/: index.ts  metadata.ts  mintjson.ts  sitemap.ts
src/security/: config.ts  index.ts  input-sanitizer.ts  url-validator.ts
tests/: CLAUDE.md  config.test.ts  embedded.test.ts  mintlify-api.test.ts  security.test.ts
