[project]
name = "agno-server"
version = "0.1.0"
description = "AgentOS server for documentation RAG"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.0.0",
    "lancedb>=0.5.0",
    "pylance",
    "pandas",
    "pyarrow",
    "openai>=1.0.0",
    "tantivy",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[project.scripts]
agno-server = "server.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]  # E402: imports after load_dotenv() is intentional

[tool.ruff.format]
quote-style = "double"
